# translateOCR

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  logging.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  pipeline.py
app/core/: config.py
app/services/: ocr.py  renderer.py  translator.py
app/tasks/: celery_app.py  tasks.py
app/tests/: conftest.py  test_api.py
tests/: conftest.py  test_api.py
