[project]
name = "translateocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "easyocr>=1.7.2",
    "fastapi[standard]>=0.115.12",
    "openai>=1.87.0",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "redis>=6.2.0",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.34.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
